--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@
 
 language: cpp
 compiler: gcc
+env:
+  matrix:
+    - BAMTOOLS_ARGS=""
+    - BAMTOOLS_ARGS="-DEnableNodeJS=true"
 before_install:
   - git submodule update --init --recursive
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
