--- a/src/Makefile
+++ b/src/Makefile
@@ -36,7 +36,7 @@ gprof:
 
 # builds bamtools static lib, and copies into root
 $(BAMTOOLS_ROOT)/lib/libbamtools.a:
-	cd $(BAMTOOLS_ROOT) && mkdir -p build && cd build && cmake .. && $(MAKE)
+	cd $(BAMTOOLS_ROOT) && mkdir -p build && cd build && cmake $(BAMTOOLS_ARGS) .. && $(MAKE)
 
 
 OBJECTS=BedReader.o \
